Add stm32 hardware configuration.

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required (VERSION 3.16)
 add_subdirectory(cmsis)
 add_subdirectory(hal)
 
+include_directories(./hal/inc ./cmsis/inc ./)
+
 SET(LIB_NAME "drivermainunit")
 project(${LIB_NAME})
 
@@ -11,5 +13,8 @@ add_library(${LIB_NAME}
 			controlbus.cpp
 			birelay.cpp
 			version.cpp
+			gpio.cpp
+			spi.cpp
+			uart.cpp
 )
 
