--- a/driver/hal/src/CMakeLists.txt
+++ b/driver/hal/src/CMakeLists.txt
@@ -1,7 +1,10 @@
 SET(LIB_NAME "hal")
 project(${LIB_NAME})
 
-include_directories(../inc ../../ ../../cmsis/inc)
+include_directories(../inc ../../cmsis/inc ../../)
+
+set(CMAKE_C_FLAGS "-DSTM32L476xx -DUSE_HAL_DRIVER -mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard -Wall -fdata-sections -ffunction-sections")
+
 
 add_library(${LIB_NAME}
 	stm32l4xx_hal.c
