--- a/driver/hw/CMakeLists.txt
+++ b/driver/hw/CMakeLists.txt
@@ -4,7 +4,7 @@ project(${LIB_NAME})
 include_directories(../hal/inc ../cmsis/inc ../hw ../board)
 
 add_library(${LIB_NAME}
-	stm32l4xx_hal_msp.cpp
+	#stm32l4xx_hal_msp.cpp
 	gpio.cpp
 	uart.cpp
 	spi.cpp
