--- a/.cproject
+++ b/.cproject
@@ -29,7 +29,7 @@
             			
             <storageModule moduleId="cdtBuildSystem" version="4.0.0">
                 				
-                <configuration buildProperties="" description="" id="0.430142308" name="Default" parent="org.eclipse.cdt.build.core.prefbase.cfg">
+                <configuration artifactName="${ProjName}" buildProperties="" description="" id="0.430142308" name="Default" optionalBuildProperties="org.eclipse.cdt.docker.launcher.containerbuild.property.volumes=,org.eclipse.cdt.docker.launcher.containerbuild.property.connection=unix:///var/run/docker.sock,org.eclipse.cdt.docker.launcher.containerbuild.property.selectedvolumes=" parent="org.eclipse.cdt.build.core.prefbase.cfg">
                     					
                     <folderInfo id="0.430142308." name="/" resourcePath="">
                         						
@@ -43,17 +43,77 @@
                             							
                             <tool id="org.eclipse.cdt.build.core.settings.holder.1017092108" name="Assembly" superClass="org.eclipse.cdt.build.core.settings.holder">
                                 								
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="org.eclipse.cdt.build.core.settings.holder.incpaths.2098284136" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/siguni}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/interface}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/hw}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/board}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/cmsis/inc}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/hal/inc}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="/home/tseeck/Develop/stm/tools/gcc-arm-none-eabi-9-2019-q4-major/arm-none-eabi/include/c++/9.2.1"/>
+                                    								
+                                </option>
+                                								
                                 <inputType id="org.eclipse.cdt.build.core.settings.holder.inType.279147360" languageId="org.eclipse.cdt.core.assembly" languageName="Assembly" sourceContentType="org.eclipse.cdt.core.asmSource" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
                                 							
                             </tool>
                             							
                             <tool id="org.eclipse.cdt.build.core.settings.holder.223812597" name="GNU C++" superClass="org.eclipse.cdt.build.core.settings.holder">
                                 								
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="org.eclipse.cdt.build.core.settings.holder.incpaths.984250777" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/siguni}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/interface}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/hw}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/board}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/cmsis/inc}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/hal/inc}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="/home/tseeck/Develop/stm/tools/gcc-arm-none-eabi-9-2019-q4-major/arm-none-eabi/include/c++/9.2.1"/>
+                                    								
+                                </option>
+                                								
                                 <inputType id="org.eclipse.cdt.build.core.settings.holder.inType.1539767791" languageId="org.eclipse.cdt.core.g++" languageName="GNU C++" sourceContentType="org.eclipse.cdt.core.cxxSource,org.eclipse.cdt.core.cxxHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
                                 							
                             </tool>
                             							
                             <tool id="org.eclipse.cdt.build.core.settings.holder.487305904" name="GNU C" superClass="org.eclipse.cdt.build.core.settings.holder">
+                                								
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="org.eclipse.cdt.build.core.settings.holder.incpaths.151653022" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/siguni}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/interface}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/hw}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/board}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/cmsis/inc}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/WomoLIN-Sw-MainUnit/driver/hal/inc}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="/home/tseeck/Develop/stm/tools/gcc-arm-none-eabi-9-2019-q4-major/arm-none-eabi/include/c++/9.2.1"/>
+                                    								
+                                </option>
                                 								
                                 <inputType id="org.eclipse.cdt.build.core.settings.holder.inType.1342664902" languageId="org.eclipse.cdt.core.gcc" languageName="GNU C" sourceContentType="org.eclipse.cdt.core.cSource,org.eclipse.cdt.core.cHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
                                 							
