--- a/driver/board/CMakeLists.txt
+++ b/driver/board/CMakeLists.txt
@@ -1,7 +1,7 @@
 SET(LIB_NAME "board")
 project(${LIB_NAME})
 
-include_directories(../hw ../cmsis/inc ../hal/inc)
+include_directories(../hw ../cmsis/inc ../hal/inc ./ext)
 
 add_library(${LIB_NAME}
 	version.cpp
@@ -10,5 +10,7 @@ add_library(${LIB_NAME}
 	extrelay.cpp
 	relaydrv.cpp
 	bme680.cpp
+	bme680drv.cpp
 	led.cpp
+	ext/bme680.c
 )
