--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD 20)
-set(COMPILER_PATH /opt/gcc-arm-none-eabi-9-2019-q4-major/bin)
+set(COMPILER_PATH /opt/gcc-arm-none-eabi-9-2019-q4-major/bin/)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic -Werror=pedantic -Wextra -Wno-ignored-qualifiers -Wno-missing-field-initializers")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSTM32L476xx -DUSE_HAL_DRIVER -mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard -fdata-sections -ffunction-sections")
@@ -78,11 +78,11 @@ target_link_options(${EXECUTABLE} PRIVATE
 
 add_custom_command(TARGET ${EXECUTABLE}
 	POST_BUILD
-	COMMAND ${COMPILER_PATH}/arm-none-eabi-size ${EXECUTABLE}
+	COMMAND ${COMPILER_PATH}arm-none-eabi-size ${EXECUTABLE}
 )
 
 add_custom_command(TARGET ${EXECUTABLE}
 	POST_BUILD
-	COMMAND ${COMPILER_PATH}/arm-none-eabi-objcopy -O ihex ${EXECUTABLE} ${PROJECT_NAME}.hex
-	COMMAND ${COMPILER_PATH}/arm-none-eabi-objcopy  -O binary -S ${EXECUTABLE} ${PROJECT_NAME}.bin
+	COMMAND ${COMPILER_PATH}arm-none-eabi-objcopy -O ihex ${EXECUTABLE} ${PROJECT_NAME}.hex
+	COMMAND ${COMPILER_PATH}arm-none-eabi-objcopy  -O binary -S ${EXECUTABLE} ${PROJECT_NAME}.bin
 )
